tests/fail/unknown_option.stderr
error: invalid option: `auto`
 --> $DIR/unknown_option.rs:6:11
  |
6 | #[impl_op(auto)]
  |           ^^^^
